# bloop

./: Cargo.toml  README.md  old-readme.md  rust-toolchain
docs/: base-language.md  building-blocks.md  fundamental-types.md  new-rules.md  notes.md  old-readme.md  todo.md
examples/: big.bloop-tt  core.bloop-bl  main-w-i32.bloop-bl  main.bloop-bl  nesty.bloop  nesty.bloop-tt  parens.bloop-tt  scratch.bloop  scratch.bloop-tt  simple.bloop  simple.bloop-tt  start.clif  type-simple.bloop-bl
scripts/: time-parallel-parsing.py
src/: ast.rs  big_s.rs  dataflow.rs  lexer.pest  lexer.rs  lexer2.rs  main.rs  token_tree.rs  tree_walker.rs
src/base_analyzer/: Cargo.toml  base_analyzer.rs
src/base_analyzer_traits/: Cargo.toml  base_analyzer_traits.rs
src/base_ast/: Cargo.toml  base_ast.rs
src/base_parser/: Cargo.toml  base_parser.rs
src/base_parser_lalrpop/: .gitignore  Cargo.toml  base_parser_lalrpop.rs  build.rs
src/base_parser_lalrpop/parsers/: arg_list.lalrpop  body.lalrpop  module.lalrpop
src/base_parser_traits/: Cargo.toml  base_parser_traits.rs
src/base_partial_ast/: Cargo.toml  base_partial_ast.rs
src/big_s/: Cargo.toml
src/build_server/: Cargo.toml
src/build_server_client/: Cargo.toml
src/codegen_cranelift/: Cargo.toml  codegen_cranelift.rs
src/codegen_traits/: Cargo.toml  codegen_traits.rs
src/db/: Cargo.toml
src/db_traits/: Cargo.toml
src/demand/: Cargo.toml
src/ecs/: Cargo.toml
src/ecs_traits/: Cargo.toml
src/error/: Cargo.toml  error.rs
src/global_defs/: Cargo.toml  global_defs.rs
src/incr/: Cargo.toml
src/lang_server/: Cargo.toml
src/lang_server_client/: Cargo.toml
src/lexer/: Cargo.toml  lexer.rs
src/lexer/src/: lexer.pest
src/lexer_traits/: Cargo.toml  lexer_traits.rs
src/mir/: Cargo.toml  mir.rs
src/plugin_host/: Cargo.toml
src/plugin_server/: Cargo.toml
src/scratch_driver/: Cargo.toml  scratch_driver.rs
src/solve/: Cargo.toml
src/token_tree/: Cargo.toml  token_tree.rs
src/tree_walker/: Cargo.toml  tree_walker.rs
