[workspace]
members = [
    "src/base_analyzer",
    "src/base_analyzer_traits",
    "src/base_ast",
    "src/base_parser",
    "src/base_parser_lalrpop",
    "src/base_parser_traits",
    "src/big_s",
    "src/build_server",
    "src/codegen_cranelift",
    "src/codegen_traits",
    "src/db",
    "src/error",
    "src/global_defs",
    "src/lang_server",
    "src/lexer",
    "src/lexer_traits",
    "src/mir",
    "src/plugin_host",
    "src/plugin_server",
    "src/scratch_driver",
    "src/token_tree",
    "src/tree_walker",
]

default-members = [
    "src/scratch_driver"
]
