[workspace]
members = [
    "src/base_analyzer",
    "src/base_analyzer_traits",
    "src/base_ast",
    "src/base_parser",
    "src/base_parser_lalrpop",
    "src/base_parser_traits",
    "src/base_partial_ast",
    "src/codegen_cranelift",
    "src/codegen_traits",
    "src/deps",
    "src/error",
    "src/lexer",
    "src/lexer_traits",
    "src/mir",
    "src/scratch_driver",
    "src/token_tree",
    "src/tree_walker",
]

default-members = [
    "src/scratch_driver"
]
