[package]
name = "b_base_analyzer_traits"
description = "Traits for all analysis for the bloop base language"
version = "0.1.0"
edition = "2018"
authors = ["Brian Anderson <andersrb@gmail.com>"]

[lib]
path = "base_analyzer_traits.rs"

[dependencies]
b_base_ast = { path = "../base_ast" }
b_deps = { path = "../deps" }
b_mir = { path = "../mir" }
