[package]
name = "b_base_parser"
version = "0.1.0"
edition = "2018"
authors = ["Brian Anderson <andersrb@gmail.com>"]

[lib]
path = "base_parser.rs"

[dependencies]
b_base_ast = { path = "../base_ast" }
b_base_parser_lalrpop = { path = "../base_parser_lalrpop" }
b_base_parser_traits = { path = "../base_parser_traits" }
b_error = { path = "../error" }
b_token_tree = { path = "../token_tree" }
b_tree_walker = { path = "../tree_walker" }

rayon = "1.2.0"
