[package]
name = "b_base_parser_lalrpop"
description = "LALRPOP definitions for the bloop base language parser"
version = "0.1.0"
edition = "2018"
authors = ["Brian Anderson <andersrb@gmail.com>"]

build = "build.rs"

[lib]
path = "base_parser_lalrpop.rs"

[dependencies]
b_base_ast = { path = "../base_ast" }
b_error = { path = "../error" }
b_token_tree = { path = "../token_tree" }

regex = "1.3.1"
lalrpop-util = "0.17.2"

[build-dependencies]
lalrpop = "0.17.2"

[dev-dependencies]
b_lexer = { path = "../lexer" }

