[package]
name = "b_base_parser_lalrpop"
description = "LALRPOP definitions for the bloop base language parser"
version = "0.1.0"
edition = "2018"
authors = ["Brian Anderson <andersrb@gmail.com>"]

build = "build.rs"

[lib]
path = "base_parser_lalrpop.rs"

[dependencies]
b_base_partial_ast = { path = "../base_partial_ast" }
b_deps = { path = "../deps" }
b_token_tree = { path = "../token_tree" }

regex = "1.4.3"
lalrpop-util = "0.17.2"

[build-dependencies]
lalrpop = "0.17.2"

[dev-dependencies]
b_lexer = { path = "../lexer" }
b_lexer_traits = { path = "../lexer_traits" }
