[package]
name = "b_build_server"
description = "Analyzes or builds all or part of a single bloop module"
version = "0.1.0"
edition = "2018"
authors = ["Brian Anderson <andersrb@gmail.com>"]

[lib]
path = "build_server.rs"

[dependencies]
prost = "0.5.0"
tokio = "0.2.0-alpha.6"
tonic = "0.1.0-alpha.5"
