[package]
name = "b_build_server_client"
description = "Communicating with the build server"
version = "0.1.0"
edition = "2018"
authors = ["Brian Anderson <andersrb@gmail.com>"]

[lib]
path = "build_server_client.rs"

[dependencies]
bytes = "0.4.12"
prost = "0.5.0"
prost-types = "0.5.0"
tokio = "0.2.0-alpha.6"
tonic = "0.1.0-alpha.5"
