[package]
name = "b_codegen_cranelift"
version = "0.1.0"
edition = "2018"
authors = ["Brian Anderson <andersrb@gmail.com>"]

[lib]
path = "codegen_cranelift.rs"

[dependencies]
b_codegen_traits = { path = "../codegen_traits" }
b_error = { path = "../error" }
b_mir = { path = "../mir" }

failure = "0.1.5"
cranelift = "0.45.0"
cranelift-codegen = { version = "0.45.0", features = ["all-arch"] }
cranelift-codegen-meta = "0.45.0"
cranelift-entity = "0.45.0"
cranelift-module = "0.45.0"
cranelift-frontend = "0.45.0"
cranelift-simplejit = "0.45.0"
cranelift-faerie = "0.45.0"
cranelift-reader = "0.45.0"
cranelift-native = "0.45.0"
cranelift-wasm = "0.45.0"
faerie = "0.11.0"
goblin = "0.0.24"
target-lexicon = "0.8.1"
