[package]
name = "b_codegen_cranelift"
version = "0.1.0"
edition = "2018"
authors = ["Brian Anderson <andersrb@gmail.com>"]

[lib]
path = "codegen_cranelift.rs"

[dependencies]
b_codegen_traits = { path = "../codegen_traits" }
b_error = { path = "../error" }
b_mir = { path = "../mir" }

failure = "0.1.6"
cranelift = "0.46.1"
cranelift-codegen = { version = "0.46.1", features = ["all-arch"] }
cranelift-codegen-meta = "0.46.1"
cranelift-entity = "0.46.1"
cranelift-module = "0.46.1"
cranelift-frontend = "0.46.1"
cranelift-simplejit = "0.46.1"
cranelift-faerie = "0.46.1"
cranelift-reader = "0.46.1"
cranelift-native = "0.46.1"
cranelift-wasm = "0.46.1"
cranelift-bforest = "0.46.1"
faerie = "0.11.0"
goblin = "0.0.24"
target-lexicon = "0.8.1"
