[package]
name = "b_scratch_driver"
description = "A temporary compiler driver"
version = "0.1.0"
edition = "2018"
authors = ["Brian Anderson <andersrb@gmail.com>"]

[[bin]]
name = "bloop-scratch"
path = "scratch_driver.rs"

[dependencies]
b_base_analyzer = { path = "../base_analyzer" }
b_base_analyzer_traits = { path = "../base_analyzer_traits" }
b_base_parser = { path = "../base_parser" }
b_base_parser_lalrpop = { path = "../base_parser_lalrpop" }
b_base_parser_traits = { path = "../base_parser_traits" }
b_codegen_cranelift = { path = "../codegen_cranelift" }
b_codegen_traits = { path = "../codegen_traits" }
b_deps = { path = "../deps" }
b_lexer = { path = "../lexer" }
b_lexer_traits = { path = "../lexer_traits" }

env_logger = "0.6.2"
log = "0.4.8"
structopt = "0.2.18"
