[package]
name = "b_scratch_driver"
description = "A temporary compiler driver"
version = "0.1.0"
edition = "2018"
authors = ["Brian Anderson <andersrb@gmail.com>"]

[[bin]]
name = "bloop-scratch"
path = "scratch_driver.rs"

[features]
default = ["parallel-tree-walk"]
parallel-tree-walk = ["b_tree_walker/parallel-tree-walk"]
broad-seq-tree-walk = ["b_tree_walker/broad-seq-tree-walk"]
deep-seq-tree-walk = ["b_tree_walker/deep-seq-tree-walk"]

[dependencies]
b_base_analyzer = { path = "../base_analyzer" }
b_base_analyzer_traits = { path = "../base_analyzer_traits" }
b_base_parser = { path = "../base_parser" }
b_base_parser_lalrpop = { path = "../base_parser_lalrpop" }
b_base_parser_traits = { path = "../base_parser_traits" }
b_codegen_cranelift = { path = "../codegen_cranelift" }
b_codegen_traits = { path = "../codegen_traits" }
b_deps = { path = "../deps" }
b_lexer = { path = "../lexer" }
b_lexer_traits = { path = "../lexer_traits" }

# Only for managing features
b_tree_walker = { path = "../tree_walker" }

env_logger = "0.6.2"
structopt = "0.2.18"
