[package]
name = "b_solve"
description = "Constraint solving"
version = "0.1.0"
edition = "2018"
authors = ["Brian Anderson <andersrb@gmail.com>"]

[lib]
path = "solve.rs"

[dependencies]
b_error = { path = "../error" }

chalk = { git = "https://github.com/rust-lang/chalk", rev = "f85bb2ed57b78728bf14fc1f0101ac5415752e4d" }
